src/test/deca/codegen/invalid/resultats/var15-ima.res
  ** IMA ** ERREUR ** Ligne 161 : 
    CMP avec op1 : adresse memoire et op2 : indefini
